# AI-Todo-Backend

./: db.sqlite3  main.py  pyproject.toml
myproject/: settings.py  urls.py
todo_app/: admin.py  apps.py  authentication.py  models.py  serializers.py  signals.py  urls.py  views.py
